Working map filter version

--- a/standalone-map.html
+++ b/standalone-map.html
@@ -5,71 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Map</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            font-family: Georgia, Serif;
-            background-color: #f5f5f5;
-        }
-
-        #map-container {
-            display: flex;
-            height: 100vh;
-        }
-
-        #map-wrapper {
-            flex: 1;
-            position: relative;
-        }
-
-        #map-search {
-            position: absolute;
-            top: 10px;
-            left: 35%;
-            transform: translateX(-50%);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 10px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        #map-search button {
-            background-color: white;
-            border: 1px solid #ccc;
-            font-size: 12px;
-            cursor: pointer;
-            padding: 5px;
-            border-radius: 5px;
-            margin-left: 10px;
-        }
-
-        #travel-mode-select, #search-radius {
-            margin-left: 10px;
-        }
-
-        #map {
-            height: 100%;
-        }
-
-        #notification {
-            position: absolute;
-            top: 70px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            z-index: 1000;
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="css/map.css" />
 </head>
 <body>
     <div id="map-container">
@@ -78,177 +14,15 @@
             <div id="notification"></div>
             <div id="map-search">
                 <button id="locate-btn">Find My Location</button>
-                <button id="navigate-btn">Navigate to nearest</button>
-                <button id="find-parking-btn">Find Nearby Parking Lots</button>
-                <select id="travel-mode-select">
-                    <option value="driving-car">Driving Car</option>
-                    <option value="cycling-regular">Cycling Regular</option>
-                    <option value="cycling-road">Cycling Road</option>
-                    <option value="cycling-mountain">Cycling Mountain</option>
-                    <option value="cycling-electric">Cycling Electric</option>
-                    <option value="foot-walking">Foot Walking</option>
-                    <option value="foot-hiking">Foot Hiking</option>
-                    <option value="wheelchair">Wheelchair</option>
-                </select>
-                <input type="number" id="search-radius" placeholder="Default Radius: 3000m" min="0" style="width: 250px; margin-right: 10px;">
+                <button id="find-restaurant-btn">Find Nearby Restaurants</button>
+                <button id="reset-markers-btn">Reset Markers</button>
+                <input type="number" id="search-radius" placeholder="Default Radius: 1000m" min="0" style="width: 250px; margin-right: 10px;">
             </div>
         </div>
     </div>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
-        // Global variables
-        let map;
-        let userMarker = null;
-        let parkingMarkers = [];
-        let routeLayer = null;
-
-        // Notification helper function
-        function showNotification(message, duration = 3000) {
-            const notification = document.getElementById('notification');
-            notification.textContent = message;
-            notification.style.display = 'block';
-            setTimeout(() => {
-                notification.style.display = 'none';
-            }, duration);
-        }
-
-        // Initialize map
-        function initMap() {
-            map = L.map('map').setView([34.6937, 135.5023], 13);
-            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                maxZoom: 19
-            }).addTo(map);
-
-            map.on('dblclick', function(e) {
-                const destLat = e.latlng.lat;
-                const destLon = e.latlng.lng;
-                setDestination(destLat, destLon);
-            });
-
-            map.doubleClickZoom.disable();
-        }
-
-        // Locate User Function
-        function locateUser() {
-            if ("geolocation" in navigator) {
-                navigator.geolocation.getCurrentPosition(
-                    function(position) {
-                        const lat = position.coords.latitude;
-                        const lon = position.coords.longitude;
-
-                        // Remove existing user marker if exists
-                        if (userMarker) {
-                            map.removeLayer(userMarker);
-                        }
-
-                        // Add new user marker
-                        userMarker = L.marker([lat, lon], {
-                            icon: L.divIcon({
-                                className: 'user-location-icon',
-                                html: '<div style="background-color: blue; width: 20px; height: 20px; border-radius: 50%; border: 2px solid white;"></div>',
-                                iconSize: [20, 20]
-                            })
-                        }).addTo(map);
-
-                        // Center map on user location
-                        map.setView([lat, lon], 15);
-                        
-                        showNotification('Location found successfully!');
-                    },
-                    function(error) {
-                        showNotification('Error: Unable to retrieve location');
-                        console.error("Error getting location:", error);
-                    }
-                );
-            } else {
-                showNotification('Geolocation is not supported by this browser.');
-            }
-        }
-
-        // Navigate User Function
-        function navigateUser(mode, nearest = true) {
-            if (!userMarker) {
-                showNotification('Please find your location first');
-                return;
-            }
-
-            // Simulated navigation logic
-            const userLocation = userMarker.getLatLng();
-            const destination = nearest 
-                ? { lat: userLocation.lat + 0.01, lon: userLocation.lng + 0.01 }
-                : { lat: 34.7, lon: 135.5 }; // Example destination
-
-            showNotification(`Navigating via ${mode} to ${nearest ? 'nearest point' : 'preset destination'}`);
-        }
-
-        // Find Nearby Parking Lots
-        function findNearbyParkingLots(radius = 3000) {
-            if (!userMarker) {
-                showNotification('Please find your location first');
-                return;
-            }
-
-            // Clear previous parking markers
-            parkingMarkers.forEach(marker => map.removeLayer(marker));
-            parkingMarkers = [];
-
-            const userLocation = userMarker.getLatLng();
-            const parkingLots = [
-                { lat: userLocation.lat + 0.005, lon: userLocation.lng + 0.005, name: 'Parking Lot A' },
-                { lat: userLocation.lat - 0.005, lon: userLocation.lng - 0.005, name: 'Parking Lot B' }
-            ];
-
-            parkingLots.forEach(lot => {
-                const marker = L.marker([lot.lat, lot.lon], {
-                    icon: L.divIcon({
-                        className: 'parking-icon',
-                        html: '<div style="background-color: green; width: 20px; height: 20px; border-radius: 50%; border: 2px solid white;"></div>',
-                        iconSize: [20, 20]
-                    })
-                }).addTo(map).bindPopup(lot.name);
-                parkingMarkers.push(marker);
-            });
-
-            showNotification(`Found ${parkingLots.length} parking lots within ${radius}m`);
-        }
-
-        // Set Destination
-        function setDestination(lat, lon) {
-            if (routeLayer) {
-                map.removeLayer(routeLayer);
-            }
-
-            const destinationMarker = L.marker([lat, lon], {
-                icon: L.divIcon({
-                    className: 'destination-icon',
-                    html: '<div style="background-color: red; width: 20px; height: 20px; border-radius: 50%; border: 2px solid white;"></div>',
-                    iconSize: [20, 20]
-                })
-            }).addTo(map).bindPopup('Destination');
-
-            map.setView([lat, lon], 15);
-            showNotification(`Destination set to: ${lat.toFixed(4)}, ${lon.toFixed(4)}`);
-        }
-
-        // Event Listeners
-        document.addEventListener('DOMContentLoaded', () => {
-            initMap();
-
-            document.getElementById('locate-btn').addEventListener('click', locateUser);
-
-            document.getElementById('navigate-btn').addEventListener('click', function() {
-                const selectedMode = document.getElementById('travel-mode-select').value;
-                navigateUser(selectedMode);
-            });
-
-            document.getElementById('find-parking-btn').addEventListener('click', function() {
-                const radiusInput = document.getElementById('search-radius').value;
-                const radius = radiusInput ? parseFloat(radiusInput, 10) : 3000;
-                findNearbyParkingLots(radius);
-            });
-        });
-    </script>
+    <script src="js/map.js"></script>
 </body>
 </html>
